--- a/index.html
+++ b/index.html
@@ -93,12 +93,11 @@
               num2 = document.getElementById("SecondNumber").value;
               result = parseInt(num1) + parseInt(num2);
 
-              fetch(`/sumResult?result=${result}`)
+              fetch(`/sumResult?n1=${num1}&n2=${num2}`)
               .then((response) => response.text())
               .then((data) => {
-                document.getElementById("result").innerHTML = data;
-
-                  window.location.href = '/result='+data;
+                data = JSON.parse(data);
+                document.getElementById("result").innerHTML = data.result;
               })
               .catch((error) => console.error(error));
             }
